--- a/memory-game/assets/style/main.css
+++ b/memory-game/assets/style/main.css
@@ -1,12 +1,73 @@
+@font-face {
+	font-family: 'helium';
+	src:url('../font/helium.eot?bgytse');
+	src:url('../font/helium.eot?#iefixbgytse') format('embedded-opentype'),
+		url('../font/helium.woff?bgytse') format('woff'),
+		url('../font/helium.ttf?bgytse') format('truetype'),
+		url('../font/helium.svg?bgytse#helium') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+:root {
+    --front-card-color:white;
+}
+body {
+    background-color: #1c4db6;
+    overflow: hidden;
+    font-family: 'Poppins', sans-serif;
+    font-size:39px;
+}
+/*
+* ICONS
+* 
+*/
+.icon {
+	font-family: 'helium';
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    text-align: center;
+    color: rgb(24, 48, 83);
+}
+*::before {
+    display: table-cell;
+    vertical-align: middle;
+}
+.icon-brush:before {
+	content: "\e618";
+}
+.icon-burger:before {
+	content: "\e620";
+}
+.icon-cup:before {
+	content: "\e63b";
+}
+.icon-diamond:before {
+	content: "\e639";
+}
+.icon-flash:before {
+	content: "\e63d";
+}
+.icon-gamepad:before {
+	content: "\e608";
+}
+.icon-glasses:before {
+	content: "\e641";
+}
+.icon-heart:before {
+	content: "\e66e";
+}
+.icon-lamp:before {
+	content: "\e66a";
+}
+.icon-rocket:before {
+	content: "\e63e";
+}
+.icon-send:before {
+	content: "\e65d";
+}
 @media screen and (min-width:1px) {
-    :root {
-        --front-card-color:white;
-    }
-    body {
-        background-color: #22577c;
-        overflow: hidden;
-        font-family: 'Poppins', sans-serif;
-    }
     .game-container {
         top: 17vh;
         height: 64vh;
@@ -48,6 +109,7 @@
         background-size: 40%;
         background-repeat: no-repeat;
         background-color: #ffff;
+        display: table;
     }
     .game-piece.move {
         transform:rotateY(180deg);
@@ -84,6 +146,9 @@
     }
 }
 @media screen and (min-width:1000px) {
+    body {
+        font-size: 60px;
+    }
     .game-container {
         top: 15vh;
         height: 66vh;
