--- a/memory-game/assets/style/main.css
+++ b/memory-game/assets/style/main.css
@@ -15,6 +15,11 @@ body {
     overflow: hidden;
     font-family: 'helium';
     font-size:39px;
+    opacity: 0;
+    transition: 0.7s;
+}
+body.fade-in {
+    opacity: 1;
 }
 /*
 * ICONS
