--- a/memory-game/assets/style/main.css
+++ b/memory-game/assets/style/main.css
@@ -71,6 +71,27 @@ body.fade-in {
 	content: "\e65d";
 }
 @media screen and (min-width:1px) {
+    .upperbody {
+        width: 100%;
+        text-align: center;
+        position: absolute;
+    }
+    .upperbody .title {
+        font-size: 24px;
+    }
+    .upperbody .time,
+    .upperbody .moves {
+        font-size: 15px;
+    }
+    .upperbody .time {
+        text-align: end;
+    }
+    .upperbody .counters {
+        display: flex;
+        width: 60%;
+        margin: 0 auto;
+        justify-content: space-between;
+    }
     .game-container {
         top: 17vh;
         height: 64vh;
@@ -146,8 +167,12 @@ body.fade-in {
         opacity: 0;
         transform: scale(0); 
         transition: all 0.3s;
+    }
+    .upperbody,
+    .game-over {
         font-family: 'Poppins', sans-serif;
     }
+
 }
 @media screen and (max-width: 800px) and (orientation: landscape) {
     .game-container {
@@ -158,6 +183,13 @@ body.fade-in {
     .game-container .game-piece {
         width: 21%;
         height: 16%;
+    }
+    .upperbody {
+        opacity: 0;
+    }
+    .upperbody.onmove {
+        opacity: 1;
+        transition: 0.8s all;
     }
 }
 @media screen and (min-width:1000px) {
