--- a/memory-game/assets/style/main.css
+++ b/memory-game/assets/style/main.css
@@ -11,7 +11,7 @@
     --front-card-color:white;
 }
 body {
-    background-color: #a0a0a0;
+    background-color: #d8d8d8;
     overflow: hidden;
     font-family: 'helium';
     font-size:39px;
