--- a/AjaxRequests/assets/css/main.css
+++ b/AjaxRequests/assets/css/main.css
@@ -93,6 +93,24 @@
         text-indent: -34px;
         text-shadow: 0 0 10px #232323;
     }
+    .initial-screen#title {
+        z-index: 1;
+        font-size: 58px;
+        font-weight: 600;
+        color: white;
+        width: 100%;
+        position: absolute;
+        margin: 0 auto;
+        left: 16%;
+        transform: translateY(26vh);
+        text-indent: -34px;
+        text-shadow: 0 0 10px #232323;
+    }
+    .initial-screen#title.in {
+        transform: translateY(36vh);
+        opacity: 1;
+        transition-delay: 0.5s;
+    }
     .player-container {
         width: 100vw;
         height: 100vh;
@@ -129,7 +147,9 @@
     }
     .pic, 
     .quote,
-    .name {
+    .name,
+    .initial-screen#title
+     {
         opacity: 0;
         transition:all 1s;
     }
@@ -243,7 +263,8 @@
         width: 75px;
         left: 89%;
     }
-    .name {
+    .name,
+    .initial-screen#title {
         text-shadow: 0px 4px 20px #232323;
         font-size: 102px;
         width: 73%;
